[tool.poetry]
name = "Siri Assistant"
version = "0.1.0"
description = "Siri Assistant Using Chat GPT"
authors = ["KishinNext"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.109.2"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
PyYAML = "^6.0.1"
python-jose = "^3.3.0"
pydantic = "^2.6.1"
python-json-logger = "^2.0.7"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
openai = "^1.11.1"
pytz = "^2024.1"
spotipy = "^2.23.0"
keyboard = "^0.13.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5"
async-asgi-testclient = "^1.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"